# plover-stenotype-not-so-extended

./: README.md  not_so_extended_stenotype.py  setup.cfg
