[metadata]
name = plover-stenotype-not-so-extended
version = 1.0.0
description =  Edited Extended layout to add the Mark button as a steno key with minimal changes
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/AshenColors/plover-stenotype-not-so-extended
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev8
py_modules =
	not_so_extended_stenotype

[options.entry_points]
plover.system =
  Stenotype Not-So-Extended = not_so_extended_stenotype
